# Phalanx

./: .gitignore  README.md  docker-compose.yml  generate_seed_data.py  seed_data.sql
infra/: localstack-init.sh
proto/: analyst_service.proto  common.proto  ml_service.proto  risk_engine.proto  transaction.proto
scripts/: simulate_mlops.py
services/analyst-service/: Dockerfile  README.md  pyproject.toml
services/analyst-service/app/: config.py  main.py
services/analyst-service/app/core/: llm.py
services/analyst-service/app/db/: session.py
services/analyst-service/app/grpc/: channel.py
services/analyst-service/app/grpc/clients/: __init__.py
services/analyst-service/app/grpc/server/: servicer.py  setup.py
services/analyst-service/app/models/: read_only.py
services/analyst-service/app/queue/: mlops_consumer.py  sqs_consumer.py
services/analyst-service/app/repositories/: risk_result_repo.py
services/analyst-service/app/services/: base.py  llama_agent.py
services/analyst-service/app/tools/: agent_tools.py
services/analyst-service/app/workflows/: __init__.py  mlops_tools.py  retrain_workflow.py
services/api-gateway/: Dockerfile  pyproject.toml
services/ml-service/: Dockerfile  pyproject.toml
services/ml-service/app/: config.py  main.py
services/ml-service/app/core/: predictor.py  s3_client.py
services/ml-service/app/grpc/: channel.py
services/ml-service/app/grpc/server/: servicer.py  setup.py
services/ml-service/app/scripts/: trainer.py
services/risk-engine-service/: Dockerfile  pyproject.toml
services/transaction-service/: Dockerfile  alembic.ini  pyproject.toml
services/transaction-service/alembic/versions/: 055f52412ff9_create_transactions_table.py  rev_1776546734_add_transaction_type.py
services/transaction-service/app/: config.py  main.py
services/transaction-service/app/db/: base.py  session.py
services/transaction-service/app/grpc/clients/: __init__.py  risk_engine_client.py
services/transaction-service/app/grpc/server/: servicer.py  setup.py
services/transaction-service/app/grpc_server/: interceptors.py  servicer.py
services/transaction-service/app/mappers/: client_mapper.py  transaction_mapper.py
services/transaction-service/app/models/: __init__.py  transaction.py
services/transaction-service/app/queue/: sqs_publisher.py
services/transaction-service/app/repo/: transaction_repo.py
services/transaction-service/app/services/: idempotency_service.py  transaction_service.py
services/transaction-service/tests/unit/: test_idempotency_service.py
shared/: pyproject.toml
shared/aegis_shared/: enums.py
shared/aegis_shared/grpc/interceptors/: correlation_client.py  logging_server.py
shared/aegis_shared/schemas/: audit.py  auth.py  common.py  risk.py  transaction.py  webhook.py
shared/aegis_shared/utils/: redis.py  sqs.py
(+44 files in other folders)
