[project]
name = "shared"
version = "0.1.0"
description = ""
authors = [
    {name = "Kolade Fajimi",email = "fajimikolade23@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
